# main-alazab-com

./: .env  .env.example  .npmrc  Dockerfile  FRAPPE_DEPLOYMENT.md  LICENSE  MANIFEST.in  README.md  SECURITY_FIXES.md  build_for_frappe.sh  capacitor.config.ts  eslint.config.js  hooks.py  index.html  license.txt  package-lock.json  package.frappe.json  package.json  pnpm-workspace.yaml  project-status-report.md  pyproject.toml  setup.py  vite.config.frappe.ts  vite.config.ts
.github/workflows/: ci.yml  frappe-deploy.yml
alazab_shop/: api.py  hooks.py  modules.txt  patches.txt  permissions.py
azab_shop/: api.py  hooks.py  modules.txt  patches.txt
azab_shop_revive/: api.py  permissions.py
deploy/: nginx.conf
docs/: ARCHITECTURE.md  CLEANUP_AUDIT_REPORT.md  COMPLETE_SETUP_GUIDE.md  COMPONENTS_GUIDE.md  CRITICAL_FIXES_APPLIED.md  DATABASE_CLEANUP_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_READY_CHECKLIST.md  FINAL_PRODUCTION_DEPLOYMENT_REPORT.md  FINAL_REPORT.md  GOOGLE_MAPS_SETUP.md  GOOGLE_PLAY_DEPLOYMENT.md  LIFECYCLE_TEST_REPORT.md  LOCAL_TESTING.md  MAINTENANCE_REQUESTS_MODULE.md  MANUAL_STEPS_GUIDE.md  NEXT_STEPS_HONEST.md  PRODUCTION_READINESS_2025.md  PRODUCTION_READINESS_FINAL.md  PRODUCTION_READINESS_REPORT.md  PROJECT_REALITY.md  PROJECT_STATUS.md  QUICK_FIXES_APPLIED.md  SECURITY_FINAL_CHECK.md  SECURITY_FIXES_APPLIED.md  TECHNICAL_INTEGRATION_PLAN.md  TESTING_LIFECYCLE_GUIDE.md
frontend/: .gitignore  README.md  index.html  package.json  vite.config.ts
public/: robots.txt  sitemap.xml
src/: App.css  App.tsx  index.css
supabase/: config.toml
(+249 files in other folders)
