[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "alazab_shop"
authors = [
    {name = "Alazab Solutions", email = "alazab.architecture@outlook.com"}
]
dynamic = ["version", "description"]
readme = "README.md"
dependencies = [
    # frappe is installed via 'bench init'
]

[project.urls]
Home = "https://github.com/alazab-solutions/alazab-shop"
Documentation = "https://docs.alazabsolutions.com"

[tool.bench.dev-dependencies]
# Development dependencies for Frappe development
